Fix scripts